--- a/index.scss
+++ b/index.scss
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   overflow: auto;
 }
@@ -15,6 +18,8 @@ body {
   width: 100%;
   height: 987px;
   background-image: url("./img/68d3a209c9dd3b24db3607d51897293faba562d9.png");
+  background-repeat: no-repeat;
+  background-size: cover;
   z-index: 1;
   @media (max-width: 480px) {
     min-width: 410px;
@@ -266,17 +271,32 @@ main {
   padding-top: 20px;
 }
 .form__field {
-  width: 370px;
+  padding: 0;
+  width: 30%;
   height: 48px;
   border-radius: 3px;
   border: 1px;
+  padding-left: 1%;
 }
 .form__field_range {
-  width: 770px;
+  width: 735px;
   color: #3e9cdc;
 }
+
 .form__field_range-label {
   color: #fff;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.range__persent {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 5px;
+  align-self: flex-end;
 }
 .form__steps {
   display: flex;
@@ -285,6 +305,7 @@ main {
   justify-content: center;
 }
 .form__product {
+  margin-top: 40px;
   display: flex;
   width: 1172px;
   gap: 20px;
@@ -384,4 +405,42 @@ main {
   position: absolute;
   left: 0%;
   top: 37%;
+}
+
+.file-upload-input {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-upload-label {
+  display: inline-block;
+  vertical-align: middle;
+  background-color: #f0f0f0;
+  border: 1px dashed #ccc;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  text-align: center;
+  width: 31%;
+  height: 47px;
+  transition: all 0.3s;
+}
+.file-upload-label::before {
+  content: "";
+  background-image: url("./img/filerange.svg");
+  height: 15px;
+  width: 15px;
+  position: relative;
+}
+
+.file-upload-label:hover {
+  background-color: #e0e0e0;
+}
+
+.file-upload-text {
+  color: #333;
 }
