--- a/index.scss
+++ b/index.scss
@@ -1068,7 +1068,7 @@ main {
     position: relative;
     top: 18px;
     left: -25px;
-    background-image: url(./img/Frame\ 19.svg);
+    background-image: url(../img/Frame\ 19.svg);
     height: 20px;
     width: 20px;
   }
